--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "clipboard-copy": "^4.0.1",
     "google-map-react": "^2.1.10",
     "moment": "^2.29.1",
@@ -25,20 +25,27 @@
     "prop-types": "^15.7.2",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-material-ui-carousel": "^2.3.1",
     "react-paginate": "^7.1.3",
     "react-password-mask": "^3.3.1",
     "react-password-toggle-icon": "^1.1.5",
     "react-pdf": "^5.3.2",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-sidebar": "^3.0.2",
     "react-social-login": "^3.4.14",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
+    "react-twitter-auth": "0.0.13",
     "react-zoom-slider": "^0.1.0",
+    "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
